Fixed color of mastery-select options to be darker, for contrast.

--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,7 @@
 .mastery-select {
   border: 1px solid #ffedd4;
   background-color: #ffedd4;
-  color: #745c3c;
+  color: #2d2d30;
   margin: 2px;
   padding: 3px;
 }
